# despike

./: .travis.yml  README.rst  example.ipynb  setup.cfg  tox.ini
despike/: __init__.py  box.py  despike.py  mean.py  median.py
tests/: test_box.py  test_despike.py  test_mean.py  test_median.py
