[metadata]
name = depsike
author = Benoit Seignovert
author-email = depsike@seignovert.fr
summary = Python package to remove spike in 2D images
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/despike
license = MIT
keywords = despiking, spike, image processing
classifier = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization

[files]
packages =
    despike

[wheel]
universal = 1
